Update about me

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
             <div class="row">
                 <div class="col-lg-4">
                   <h3>Brief introduction</h3>
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hello my name is Muhammad bin Sahak, currently im pursuing master degree in Software Enginering in UTM Skudai. He
+                        is a web developer who is in love with building powerful web applications. He also in love with laravel and Angular 2 framework which is shown in his portfolio. love to explore new technologies and constantly improving himself as better web and mobile developer</p>
                 </div>
                 <div class="col-lg-4">
                   <h3>Education Background</h3>
