--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
                 <div class="col-lg-4">
                   <h3>Brief introduction</h3>
                     <p>Hello my name is Muhammad bin Sahak, currently im pursuing master degree in Software Enginering in UTM Skudai. He
-                        is a web & mobile developer who is in love with building powerful applications. He also in love with laravel and Angular 2 framework which is shown in his portfolio. love to explore new technologies and constantly improving himself to be better web and mobile developer</p>
+                        is a web & mobile developer who is in love with building powerful applications.</p> <br>
+                        <p>He also in love with laravel and Angular 2 framework which is shown in his portfolio. love to explore new technologies and constantly improving himself to be better web and mobile developer</p>
                 </div>
                 <div class="col-lg-4">
                   <h3>Education Background</h3>
